# simple-skills

./: .gitignore  README.md  i  install.ps1  install.sh  pyproject.toml
.github/workflows/: publish.yml
docs/: AGENTS.md  AGENT_POLICY.md  AGENT_WORK.md  CODE_COMMENTS.md  DESIGN_SYSTEM.md  MIGRATION.md  SKILL_PREAMBLE.md  START_HERE.md  TOOLS.md  WHAT_NEXT.md  artifact-schemas.json  first-party-skills.json  gitignore.agent-work.snippet  install-profiles.json  settings.yaml
docs/examples/: README.md
scripts/: validate_skills.py
skills/basic-design/: SKILL.md
skills/brainstorming/: SKILL.md
skills/business-analysis/: SKILL.md
skills/detail-design/: SKILL.md
skills/docs/: SKILL.md
skills/docs/agents/: openai.yaml
skills/done/: SKILL.md
skills/execution/: SKILL.md
skills/init/: SKILL.md
skills/investigate/: SKILL.md
skills/planning/: SKILL.md
skills/quick-fix/: SKILL.md
skills/research/: SKILL.md
skills/review/: SKILL.md
skills/review-pr/: SKILL.md
skills/scaffold/: SKILL.md
skills/sync/: SKILL.md
skills/tester/: SKILL.md
src/simple_skills/: __init__.py  __main__.py  cli.py
tests/: test_installers.py  test_lint_and_context.py  test_session_work.py  test_sk_cli.py  test_validate_artifacts.py
tools/choice-reader/: README.md  read.py
tools/decision-server/: README.md  server.py
tools/session/: RULES_BUNDLE.template.md  artifact-schemas.json  build_context.py  delegate_worker.py  detect_agents.py  lint_artifacts.py  session.sh  validate_artifacts.py
tools/session-serve/: README.md  serve.py
tools/video-keyframes/: README.md
(+52 files in other folders)
