[project]
name = "simple-skills"
version = "0.2.0"
description = "Simple Skills — agent kit installer (sk) and office skill tooling"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "truongnat" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/truongnat/simple-skills"
Repository = "https://github.com/truongnat/simple-skills"

[project.scripts]
sk = "simple_skills.cli:main"

[project.optional-dependencies]
office = [
  "openpyxl>=3.1.5",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
  "pypdf>=5.1.0",
  "pdfplumber>=0.11.4",
  "reportlab>=4.2.5",
]
dev = [
  "simple-skills[office]",
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/install.sh",
  "/install.ps1",
  "/i",
  "/docs",
  "/skills",
  "/tools",
  "/scripts",
  "/README.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "src",
  "skills/office-common/python",
  "skills/xlsx/scripts",
  "skills/docx/scripts",
  "skills/pptx/scripts",
  "skills/pdf/scripts",
]
